<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_24"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_note_24"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_todos"
            android:icon="@drawable/ic_todo_24"
            android:title="@string/todos" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category_24"
            android:title="@string/categories" />
    </group>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings" />

</menu>